@@ -4,16 +4,15 @@ import io.github.wickeddroidmx.plugin.events.team.PlayerJoinedTeamEvent;
 import io.github.wickeddroidmx.plugin.teams.TeamManager;
 import io.github.wickeddroidmx.plugin.teams.UhcTeam;
 import io.github.wickeddroidmx.plugin.utils.chat.ChatUtils;
+import io.github.wickeddroidmx.plugin.utils.items.ItemCreator;
+import net.kyori.adventure.text.Component;
 import org.bukkit.Bukkit;
 import org.bukkit.ChatColor;
-import org.bukkit.DyeColor;
 import org.bukkit.Material;
 import org.bukkit.entity.Player;
 import org.bukkit.inventory.Inventory;
-import team.unnamed.gui.abstraction.item.ItemClickable;
-import team.unnamed.gui.core.gui.type.GUIBuilder;
-import team.unnamed.gui.core.item.type.ItemBuilder;
-
+import team.unnamed.gui.menu.item.ItemClickable;
+import team.unnamed.gui.menu.type.MenuInventory;
 import javax.inject.Inject;
 import java.util.Comparator;
 import java.util.stream.Collectors;
@@ -24,94 +23,35 @@ public class UhcTeamMenu {
     private TeamManager teamManager;
 
     public Inventory getTeamList() {
-        return GUIBuilder.builderPaginated(UhcTeam.class, "Teams creados - %page%")
-                .fillBorders(ItemClickable
-                        .builderCancellingEvent()
-                        .setItemStack(ItemBuilder
-                                .newDyeItemBuilder("STAINED_GLASS_PANE", DyeColor.BLACK)
-                                .setName(" ")
-                                .build())
-                        .build()
-                )
-                .setItemIfNotEntities(ItemClickable
-                        .builderCancellingEvent()
-                        .setItemStack(ItemBuilder
-                                .newDyeItemBuilder("STAINED_GLASS_PANE", DyeColor.LIGHT_GRAY)
-                                .setName("")
-                                .build())
-                        .build())
-                .setItemParser(team -> ItemClickable.builderCancellingEvent().setItemStack(ItemBuilder
-                                .newSkullBuilder(1)
-                                .setOwner(team.getOwner().getName())
-                                .setName(ChatColor.GOLD + team.getName())
-                                .setLore(team.getTeamPlayers()
-                                        .stream()
-                                        .map(Bukkit::getOfflinePlayer)
-                                        .map(player -> ChatUtils.format(String.format("&7- %s", player.getName())))
-                                        .collect(Collectors.toList()))
-                                .build()
-                ).build())
-                .setNextPageItem(page -> ItemClickable.builder(53)
-                        .setItemStack(ItemBuilder.newBuilder(Material.ARROW)
-                                .setName("Siguiente pagina - " + page)
-                                .build()
-                        )
-                        .build())
-                .setPreviousPageItem(page -> ItemClickable.builder(45)
-                        .setItemStack(ItemBuilder.newBuilder(Material.ARROW)
-                                .setName("Anterior pagina - " + page)
-                                .build()
-                        )
-                        .build()
-                )
-                .setEntities(teamManager.getUhcTeams().values().stream().sorted(Comparator.comparing(uhcTeam -> uhcTeam.getOwner().getName())).toList())
-                .setBounds(10, 35)
-                .setItemsPerRow(7)
+        return MenuInventory.newPaginatedBuilder(UhcTeam.class, "Teams existentes - %page%")
+                .itemIfNoEntities(ItemClickable.onlyItem(new ItemCreator(Material.LIGHT_GRAY_STAINED_GLASS_PANE).name(" ")))
+                .entityParser(team -> ItemClickable.onlyItem(new ItemCreator(Material.PLAYER_HEAD).setSkullSkin(team.getOwner()).name(ChatColor.GOLD + team.getName()).lore((Component) team.getTeamPlayers().stream().map(Bukkit::getOfflinePlayer).map(offlinePlayer -> ChatUtils.format(String.format("&7- %s", offlinePlayer.getName()))).collect(Collectors.toList()))))
+                .nextPageItem(page -> ItemClickable.builder(53).item(new ItemCreator(Material.ARROW).name(ChatColor.GOLD + "Siguiente Página - " + page)).build())
+                .previousPageItem(page -> ItemClickable.builder(53).item(new ItemCreator(Material.ARROW).name(ChatColor.GOLD + "Anterior Página - " + page)).build())
+                .itemIfNoNextPage(ItemClickable.onlyItem(new ItemCreator(Material.LIGHT_GRAY_STAINED_GLASS_PANE).name(" ")))
+                .itemIfNoPreviousPage(ItemClickable.onlyItem(new ItemCreator(Material.LIGHT_GRAY_STAINED_GLASS_PANE).name(" ")))
+                .bounds(10, 44)
+                .itemsPerRow(7)
+                .entities(teamManager.getUhcTeams().values().stream().filter(t -> t.isAlive()).toList())
                 .build();
     }
 
     public Inventory getJoinInventory(Player sender, Player target) {
-        return  GUIBuilder.builderPaginated(UhcTeam.class, "Teams")
-                .setEntities(teamManager.getUhcTeams().values().stream().sorted(Comparator.comparing(uhcTeam -> uhcTeam.getOwner().getName())).toList())
-                .setItemParser(uhcTeam -> ItemClickable.builderCancellingEvent()
-                        .setItemStack(ItemBuilder.newSkullBuilder(uhcTeam.getSize()).setName(ChatColor.GOLD + "Team de " + uhcTeam.getName()).setOwner(uhcTeam.getOwner().getName()).build())
-                        .setAction(inventoryClickEvent -> {
-                            Bukkit.getPluginManager().callEvent(new PlayerJoinedTeamEvent(uhcTeam, target));
-                            sender.sendMessage(ChatUtils.PREFIX + ChatUtils.format(String.format("El jugador &6%s &7se ha unido al equipo de &6%s", target.getName(), uhcTeam.getOwner().getName())));
+        return MenuInventory.newPaginatedBuilder(UhcTeam.class, "Teams")
+                .entities(teamManager.getUhcTeams().values().stream().sorted(Comparator.comparing(uhcTeam -> uhcTeam.getOwner().getName())).toList())
+                .entityParser(uhcTeam -> ItemClickable.builder().item(new ItemCreator(Material.PLAYER_HEAD).setSkullSkin(uhcTeam.getOwner()).name(ChatColor.GOLD + uhcTeam.getName() + " Team")).action(e -> {
+                    Bukkit.getPluginManager().callEvent(new PlayerJoinedTeamEvent(uhcTeam, target));
+                    sender.sendMessage(ChatUtils.PREFIX + ChatUtils.format(String.format("El jugador &6%s &7se ha unido al equipo de &6%s", target.getName(), uhcTeam.getOwner().getName())));
 
-                            return true;
-                        })
-                        .build())
-                .setBounds(10, 35)
-                .setItemsPerRow(7)
-                .setNextPageItem(page -> ItemClickable.builder(53)
-                        .setItemStack(ItemBuilder.newBuilder(Material.ARROW)
-                                .setName("Siguiente pagina - " + page)
-                                .build()
-                        )
-                        .build())
-                .setPreviousPageItem(page -> ItemClickable.builder(45)
-                        .setItemStack(ItemBuilder.newBuilder(Material.ARROW)
-                                .setName("Anterior pagina - " + page)
-                                .build()
-                        )
-                        .build()
-                )
-                .setItemIfNotEntities(ItemClickable
-                        .builderCancellingEvent()
-                        .setItemStack(ItemBuilder
-                                .newDyeItemBuilder("STAINED_GLASS_PANE", DyeColor.LIGHT_GRAY)
-                                .setName("")
-                                .build())
-                        .build())
-                .fillBorders(ItemClickable
-                        .builderCancellingEvent()
-                        .setItemStack(ItemBuilder
-                                .newDyeItemBuilder("STAINED_GLASS_PANE", DyeColor.BLACK)
-                                .setName(" ")
-                                .build())
-                        .build()
-                )
+                    return true;
+                }).build())
+                .bounds(10, 44)
+                .itemsPerRow(7)
+                .nextPageItem(p -> ItemClickable.onlyItem(new ItemCreator(Material.ARROW).name(ChatColor.GOLD + "Siguiente Página - " + p)))
+                .previousPageItem(p -> ItemClickable.onlyItem(new ItemCreator(Material.ARROW).name(ChatColor.GOLD + "Anterior Página - " + p)))
+                .itemIfNoNextPage(ItemClickable.onlyItem(new ItemCreator(Material.LIGHT_GRAY_STAINED_GLASS_PANE).name(" ")))
+                .itemIfNoPreviousPage(ItemClickable.onlyItem(new ItemCreator(Material.LIGHT_GRAY_STAINED_GLASS_PANE).name(" ")))
+                .itemIfNoEntities(ItemClickable.onlyItem(new ItemCreator(Material.LIGHT_GRAY_STAINED_GLASS_PANE).name(" ")))
                 .build();
     }
 }
